# electricity-grid

./: .gitignore  CLAUDE.md  README.md  avoid-ai-writing.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: games.py  main.py
docs/: european-grid-balancing.md  learn-page-guidelines.md
docs/sources/tennet/: afrr-documents.md  balancing-markets.md  fcr-documents.md  handboek-fcr-voor-bsps-en-20260408-1.md  imbalance-pricing-system.md  manifest.json  manual-bidding-btp.md  merit-order-list.md  nl-en-markets-ancillary-services.md
docs/sources/tennet/inbox/done/: Balancing markets.htm  FCR documents.htm  Merit order list.htm  aFRR documents.htm
scripts/: convert_saved_html.py  fetch_pdfs.py  freeze.py  scrape_tennet.py  smoke_test.py
static/css/: style.css
static/js/: balance.js  europe.js  glossary.js  home.js  market.js  medals.js  mix.js  transmission.js
templates/: base.html  index.html  learn.html
templates/games/: balance.html  europe.html  home.html  market.html  mix.html  transmission.html
